--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   app:
     build: .
     command: python ./app.py
+    volumes:
+      - .:/dataox_test_task
     depends_on:
       - postgres
     env_file:
